Use unmodifiable maps; add repair attempt publishing
Replaced Map.copyOf(...) with Collections.unmodifiableMap(...) (and LinkedHashMap copies) in runtime API and SDK model classes to preserve insertion order and allow null output entries; added a contract test to ensure null-valued output entries are preserved. Adjusted TaskResultService flow: moved discardStage handling, added discardStageIfVisibleFinalExists, and implemented publishWorkAttemptClosedRepair with helper mappers for attempt status/final reason to emit attempt-closed repair events during result-runtime repairs. Added unit tests and lifecycle assertions related to attempt-closed events and repair convergence.